correzione bug